<resources>
    <string name="app_name">loginAppAS</string>
    <string name="register_label">Rejestruj konto</string>
    <string name="email_label">Podaj e-mail:</string>
    <string name="pass_label">Podaj haslo:</string>
    <string name="pass_repeat_label">Powtórz haslo:</string>
    <string name="confirm_btn">ZATWIERDŻ</string>
    <string name="result_label">Autor 91059923998</string>
    <string name="email_hint">email</string>
    <string name="pass_hint">pass1</string>
    <string name="pass_repeat_hint">pass2</string>
</resources>
